Prefix environnement variable with ITAG_ instead of APP_

--- a/config.env
+++ b/config.env
@@ -3,27 +3,27 @@
 # =====================================================================
 
 # Application endpoint url as it will be displayed in results (WITHOUT TRAILING SLASH !)
-APP_ENDPOINT=http://localhost:11211
+ITAG_ENDPOINT=http://localhost:11211
 
-# Database port for console access (e.g. psql -h localhost -p ${DATABASE_EXPOSED_PORT})
-DATABASE_EXPOSED_PORT=11212
+# Database port for console access (e.g. psql -h localhost -p ${ITAG_DATABASE_EXPOSED_PORT})
+ITAG_DATABASE_EXPOSED_PORT=11212
 
 # Application status is "prod" or "dev"
-APP_PRODUCTION_STATUS=prod
+ITAG_PRODUCTION_STATUS=prod
 
-# Database configuration - you should only change DATABASE_USER_PASSWORD
-DATABASE_USER_NAME=itag
-DATABASE_USER_PASSWORD=itag
-DATABASE_NAME=itag
+# Database configuration - you should only change ITAG_DATABASE_USER_PASSWORD
+ITAG_DATABASE_USER_NAME=itag
+ITAG_DATABASE_USER_PASSWORD=itag
+ITAG_DATABASE_NAME=itag
 
 # Maximum area of input geometry for landCover computation (in square kilometers)
-APP_LANDCOVER_MAXIMUM_AREA=200000
+ITAG_LANDCOVER_MAXIMUM_AREA=200000
 
 # True to return intersection geometries in WKT
-APP_RETURN_GEOMETRIES=false
+ITAG_RETURN_GEOMETRIES=false
 
 # Tolerance in degrees applied during geometry simplification (0 means no simplification)
-APP_SIMPLICATION_TOLERANCE=0.1
+ITAG_SIMPLICATION_TOLERANCE=0.1
 
 # Non public additionnals datasource URLs - contact me (jerome.gasperi@gmail.com)
 GPW_DATASOURCE_URL=
