Update build process

--- a/config.env
+++ b/config.env
@@ -16,6 +16,10 @@ ITAG_DATABASE_USER_NAME=itag
 ITAG_DATABASE_USER_PASSWORD=itag
 ITAG_DATABASE_NAME=itag
 
+# PostgreSQL PGDATA directory i.e. directory on host where the database files are stored
+# If set to a string and not a path, then a volume is created within docker volumes storage
+POSTGRES_DATA=database_data
+
 # Maximum area of input geometry for landCover computation (in square kilometers)
 ITAG_LANDCOVER_MAXIMUM_AREA=200000
 
