Docker images uses s6-overlay

--- a/config.env
+++ b/config.env
@@ -2,8 +2,11 @@
 # Main configuration
 # =====================================================================
 
-# Application endpoint url as it will be displayed in results (WITHOUT TRAILING SLASH !)
+# [IMPORTANT] Application public endpoint url as it will be displayed in results (WITHOUT TRAILING SLASH !)
 ITAG_ENDPOINT=http://localhost:1212
+
+### itag local exosed port
+ITAG_EXPOSED_PORT=1212
 
 # Database port for console access (e.g. psql -h localhost -p ${ITAG_DATABASE_EXPOSED_PORT})
 ITAG_DATABASE_EXPOSED_PORT=1213
