--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,7 +26,8 @@ services:
       - ${ENV_FILE:-config.env}
     environment: 
       ### Set to 0 in production environment to activate opcache
-      - ITAG_DEBUG_MODE=0
+      - ITAG_DEBUG_MODE=1
+      - PHP_ENABLE_XDEBUG=1
       ### Server configuration (uncomment to change values) 
       #- PHP_FPM_MAX_CHILDREN=4096
       #- PHP_FPM_START_SERVERS=20
@@ -49,13 +50,11 @@ services:
       test: ["CMD", "curl", "-f", "http://127.0.0.1"]
       interval: 1m
       timeout: 5s
+    volumes:
+      - ./app:/app
   itagdb:
-    image: jjrom/itag-database:5.0
+    image: mdillon/postgis:11-alpine
     restart: always
-    build:
-      context: ./
-      dockerfile: ./build/itag-database/Dockerfile
-    command: docker-entrypoint.sh -c config_file=/etc/postgresql.conf
     env_file:
       - ${ENV_FILE:-config.env}
     environment:
@@ -72,7 +71,7 @@ services:
       #- POSTGRES_EFFECTIVE_CACHE_SIZE=32GB
       #- POSTGRES_RANDOM_PAGE_COST=1.5
       #- POSTGRES_SYNCHRONOUS_COMMIT=off
-      #- POSTGRES_LOG_MIN_DURATION_STATEMENT=300
+      - POSTGRES_LOG_MIN_DURATION_STATEMENT=0
       #- POSTGRES_AUTOVACUUM=on
     ports:
       - ${ITAG_DATABASE_EXPOSED_PORT:-1213}:5432
