--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,7 +26,7 @@ services:
       - ${ENV_FILE:-config.env}
     environment: 
       ### Set to 0 in production environment to activate opcache
-      - ITAG_DEBUG_MODE=1
+      - ITAG_DEBUG=1
       - PHP_ENABLE_XDEBUG=1
       ### Server configuration (uncomment to change values) 
       #- PHP_FPM_MAX_CHILDREN=4096
