--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - ${ENV_FILE:-config.env}
     environment: 
       ### Set to 0 in production environment to activate opcache
-      - ITAG_DEBUG_MODE=0
+      - ITAG_DEBUG=0
       ### Server configuration (uncomment to change values) 
       #- PHP_FPM_MAX_CHILDREN=4096
       #- PHP_FPM_START_SERVERS=20
