Remove DATABASE_IS_EXTERNAL config param

--- a/config.env
+++ b/config.env
@@ -8,36 +8,37 @@ ITAG_ENDPOINT=http://localhost:1212
 ### itag local exosed port
 ITAG_EXPOSED_PORT=1212
 
-# Database port for console access (e.g. psql -h localhost -p ${ITAG_DATABASE_EXPOSED_PORT})
+### Database port for console access (e.g. psql -h ${DATABASE_HOST} -p ${DATABASE_EXPOSED_PORT})
+### [IMPORTANT]
+###    - For external database, this value should be the same as DATABASE_PORT
 #ITAG_DATABASE_EXPOSED_PORT=5432
 ITAG_DATABASE_EXPOSED_PORT=1213
 
-# Database configuration
-# Is PG cluster already exists somewhere on the network: yes/no
-# default is no: a docker for PG is provided and geodata are loaded into a database
-# if set to yes, an external PG database, version 11, must be available
-# (following PG extensions will be installed in the target database:
-#  pg_trgm, postgis, postgis_topology, unaccent)
-ITAG_DATABASE_IS_EXTERNAL=no
 
-# you should only change ITAG_DATABASE_USER_PASSWORD if DATABASE_IS_EXTERNAL=no,
-# provide postgresql host parameters here
-# example for localdg
-ITAG_DATABASE_USER_NAME=itag
-ITAG_DATABASE_USER_PASSWORD=itag
-ITAG_DATABASE_NAME=itag
+### [IMPORTANT]
+###   - If you set DATABASE_HOST to "itagdb" then a local PostgreSQL container will be created (this is the default)
+###   - If you want to use an existing external (i.e. not on localhost !) PostgreSQL endpoint then provide a valid hostname
+###   - If you want to use and existing localhost PostgreSQL, then set the value to "host.docker.internal"
+### 
 ITAG_DATABASE_HOST=itagdb
 ITAG_DATABASE_PORT=5432
 
-# example for external db
+### [IMPORTANT] Usually you should only change the DATABASE_USER_PASSWORD value and leave the other values untouched
+ITAG_DATABASE_USER_NAME=itag
+ITAG_DATABASE_USER_PASSWORD=itag
+ITAG_DATABASE_NAME=itag
+
+# Example for external db
 #ITAG_DATABASE_USER_NAME=postgres
 #ITAG_DATABASE_USER_PASSWORD=secret
 #ITAG_DATABASE_NAME=itag
 #ITAG_DATABASE_HOST=pg11.toto.eu-west-1.rds.amazonaws.com
 #ITAG_DATABASE_PORT=5432
 
-# PostgreSQL PGDATA directory i.e. directory on host where the database files are stored
-# If set to a string and not a path, then a volume is created within docker volumes storage
+### PostgreSQL PGDATA directory i.e. directory on host where the database files are stored.
+### [IMPORTANT] 
+###    - This value should is only used if DATABASE_HOST is set to "restodb" (i.e. for local database container)
+###    - If set to a string and not a path, then a volume is created within docker volumes storage (this is the default)
 POSTGRES_DATA=database_data
 
 # Maximum area of input geometry for landCover computation (in square kilometers)
