Correct docker-compose image tag name

--- a/docker-compose-itagdb.dev.yml
+++ b/docker-compose-itagdb.dev.yml
@@ -10,7 +10,7 @@ networks:
       name: rnet
 services:
   itagdb:
-    image: jjrom/itag-database:5.0
+    image: jjrom/itag-database:latest
     restart: always
     build:
       context: ./
