--- a/config.env
+++ b/config.env
@@ -14,6 +14,8 @@ ITAG_EXPOSED_PORT=1212
 #ITAG_DATABASE_EXPOSED_PORT=5432
 ITAG_DATABASE_EXPOSED_PORT=1213
 
+### [IMPORTANT] Default planet (can be superseeded with query parameter "planet")
+ITAG_DEFAULT_PLANET=mars
 
 ### [IMPORTANT]
 ###   - If you set DATABASE_HOST to "itagdb" then a local PostgreSQL container will be created (this is the default)
