--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -18,6 +18,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    steps:
+    # defaults to shallow checkout
+    - uses: actions/checkout@v2
+    
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
 
