--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - POSTGRES_HOST=${ITAG_DATABASE_HOST:-itagdb}
       - POSTGRES_PORT=${ITAG_DATABASE_PORT:-5432}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USER_NAME:-itag}"]
+      test: ["CMD-SHELL", "pg_isready -U ${ITAG_DATABASE_USER_NAME:-itag}"]
       interval: 1m
       timeout: 5s
     volumes:
